[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/Dialog/CustomSlider.gd" type="Script" id=1]
[ext_resource path="res://addons/Dialog/Graphics/button_empty_normal.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.431373 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="CustomSlider" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -992.0
margin_bottom = -248.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}
min_value = -10.0
max_value = 10.0
style = 1

[node name="background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slider_button" type="TextureButton" parent="."]
margin_left = -4.0
margin_top = 240.0
margin_right = 36.0
margin_bottom = 280.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_rect_changed" from="background" to="." method="_on_background_item_rect_changed"]
[connection signal="gui_input" from="slider_button" to="." method="_on_slider_button_gui_input"]
